[project]
name = ""
version = ""
description = ""
authors = [
    {name = "sarayourfriend", email = "24264157+sarayourfriend@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "GPLv3"}
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
